--- a/belhalal_update/pubspec.yaml
+++ b/belhalal_update/pubspec.yaml
@@ -31,9 +31,13 @@ dependencies:
     sdk: flutter
   dio: ^4.0.0
   flutter_easyloading: ^3.0.3
+  cached_network_image: ^3.2.0
+  image_picker: ^0.8.4+3
+  pull_to_refresh: ^2.0.0
   fluttertoast: ^8.0.8
   hexcolor: ^2.0.5
   get: ^4.3.8
+  carousel_slider: ^4.0.0
   get_storage:
   shared_preferences:
 
