--- a/belhalal_update/pubspec.yaml
+++ b/belhalal_update/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   cached_network_image: ^3.2.0
   image_picker: ^0.8.4+3
   pull_to_refresh: ^2.0.0
+  email_validator: ^2.0.1
+  flutter_svg: ^0.23.0+1
   fluttertoast: ^8.0.8
   hexcolor: ^2.0.5
   get: ^4.3.8
